--- a/lib/web/templates/admin/room/new.html.eex
+++ b/lib/web/templates/admin/room/new.html.eex
@@ -17,7 +17,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: zone_room_path(@conn, :create, @zone.id), zone: @zone, changeset: @changeset, title: "New", submit: "Create" %>
     </div>
   </div>
