--- a/lib/web/templates/admin/room_feature/_form.html.eex
+++ b/lib/web/templates/admin/room_feature/_form.html.eex
@@ -1,37 +1,46 @@
 <div class="box">
-  <div class="box-header">
+  <div class="box-header with-border">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_tag @path, method: form_method(@feature) do %>
+  <%= form_tag @path, [method: form_method(@feature), class: "form-horizontal"] do %>
     <div class="box-body">
       <div class="lead"><%= Help.get("room.feature") %></div>
 
       <div class="form-group">
-        <%= label :feature, :key %>
-        <%= text_input :feature, :key, value: Map.get(@feature, :key, ""), class: "form-control" %>
-        <span class="help-block"><%= Help.get("room_feature.key") %></span>
+        <%= label :feature, :key, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input :feature, :key, value: Map.get(@feature, :key, ""), class: "form-control" %>
+          <span class="help-block"><%= Help.get("room_feature.key") %></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label :feature, :short_description %>
-        <%= text_input :feature, :short_description, value: Map.get(@feature, :short_description, ""), class: "form-control" %>
-        <span class="help-block"><%= Help.get("room_feature.short_description") %></span>
+        <%= label :feature, :short_description, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input :feature, :short_description, value: Map.get(@feature, :short_description, ""), class: "form-control" %>
+          <span class="help-block"><%= Help.get("room_feature.short_description") %></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label :feature, :listen %>
-        <%= text_input :feature, :listen, value: Map.get(@feature, :listen, ""), class: "form-control" %>
-        <span class="help-block"><%= Help.get("room_feature.listen") %></span>
+        <%= label :feature, :listen, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input :feature, :listen, value: Map.get(@feature, :listen, ""), class: "form-control" %>
+          <span class="help-block"><%= Help.get("room_feature.listen") %></span>
+        </div>
+      </div>
 
       <div class="form-group">
-        <%= label :feature, :description %>
-        <%= textarea :feature, :description, value: Map.get(@feature, :description, ""), class: "form-control", rows: 5 %>
+        <%= label :feature, :description, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea :feature, :description, value: Map.get(@feature, :description, ""), class: "form-control", rows: 5 %>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
