--- a/lib/web/templates/admin/room_item/add-item.html.eex
+++ b/lib/web/templates/admin/room_item/add-item.html.eex
@@ -18,24 +18,26 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
-      <div class="box">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Add Item to Room</h3>
         </div>
 
-        <%= form_tag room_room_item_path(@conn, :create, @room.id, spawn: false) do %>
+        <%= form_tag room_room_item_path(@conn, :create, @room.id, spawn: false), [class: "form-horizontal"] do %>
           <div class="box-body">
             <div class="lead"><%= Help.get("room.items") %></div>
 
             <div class="form-group">
-              <%= label :item, :id, "Item" %>
-              <%= select :item, :id, @items |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+              <%= label :item, :id, "Item", class: "col-md-4" %>
+              <div class="col-md-8">
+                <%= select :item, :id, @items |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+              </div>
             </div>
           </div>
 
           <div class="box-footer">
-            <%= submit "Add Item", class: "btn btn-primary" %>
+            <%= submit "Add Item", class: "btn btn-primary pull-right" %>
           </div>
         <% end %>
       </div>
