--- a/lib/web/templates/admin/shop/new.html.eex
+++ b/lib/web/templates/admin/shop/new.html.eex
@@ -18,7 +18,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: room_shop_path(@conn, :create, @room.id), room: @room, changeset: @changeset, title: "New", submit: "Create" %>
     </div>
   </div>
