--- a/lib/web/templates/admin/shop_item/edit.html.eex
+++ b/lib/web/templates/admin/shop_item/edit.html.eex
@@ -19,7 +19,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: shop_item_path(@conn, :update, @shop_item.id), changeset: @changeset, title: "Edit Shop Item", submit: "Update" %>
     </div>
   </div>
