--- a/lib/web/templates/admin/zone/_form.html.eex
+++ b/lib/web/templates/admin/zone/_form.html.eex
@@ -1,54 +1,66 @@
-<div class="box">
+<div class="box box-primary">
   <div class="box-header">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_for @changeset, @path, fn (f) -> %>
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
       <div class="form-group">
-        <%= label f, :name %>
-        <%= text_input f, :name, class: "form-control" %>
-        <%= error_tag f, :name %>
-        <span class="help-block"><%= Help.get("zone.name") %></span>
+        <%= label f, :name, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :name, class: "form-control" %>
+          <%= error_tag f, :name %>
+          <span class="help-block"><%= Help.get("zone.name") %></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :description %>
-        <%= textarea f, :description, class: "form-control" %>
-        <%= error_tag f, :description %>
+        <%= label f, :description, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :description, class: "form-control" %>
+          <%= error_tag f, :description %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :graveyard_id %>
-        <%= select f, :graveyard_id, Zone.graveyards(), class: "form-control" %>
-        <%= error_tag f, :graveyard_id %>
-        <span class="help-block"><%= Help.get("zone.graveyard") %></span>
+        <%= label f, :graveyard_id, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= select f, :graveyard_id, Zone.graveyards(), class: "form-control" %>
+          <%= error_tag f, :graveyard_id %>
+          <span class="help-block"><%= Help.get("zone.graveyard") %></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :starting_level %>
-        <%= number_input f, :starting_level, class: "form-control" %>
-        <%= error_tag f, :starting_level %>
+        <%= label f, :starting_level, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :starting_level, class: "form-control" %>
+          <%= error_tag f, :starting_level %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :ending_level %>
-        <%= number_input f, :ending_level, class: "form-control" %>
-        <%= error_tag f, :ending_level %>
+        <%= label f, :ending_level, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= number_input f, :ending_level, class: "form-control" %>
+          <%= error_tag f, :ending_level %>
+        </div>
       </div>
 
       <%= if @edit_name_layers do %>
         <%= Enum.map(layers(@zone), fn (layer) -> %>
           <div class="form-group">
-            <label for="zone_map_layer_names_<%= layer %>">Map Layer <%= layer %></label>
-            <input type="text" id="zone_map_layer_names_<%= layer %>" name="zone[map_layer_names][<%= layer %>]" value="<%= layer_name(@zone, layer) %>" class="form-control" />
+            <label for="zone_map_layer_names_<%= layer %>" class="col-md-4">Map Layer <%= layer %></label>
+            <div class="col-md-8">
+              <input type="text" id="zone_map_layer_names_<%= layer %>" name="zone[map_layer_names][<%= layer %>]" value="<%= layer_name(@zone, layer) %>" class="form-control" />
+            </div>
           </div>
         <% end) %>
       <% end %>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
