--- a/lib/web/templates/admin/announcement/index.html.eex
+++ b/lib/web/templates/admin/announcement/index.html.eex
@@ -16,8 +16,9 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
+          <h3 class="box-title"></h3>
           <div class="box-tools">
             <%= link("New Announcement", to: announcement_path(@conn, :new), class: "btn btn-primary") %>
           </div>
@@ -50,7 +51,8 @@
               <% end %>
             </tbody>
           </table>
-
+        </div>
+        <div class="box-footer">
           <%= render(SharedView, "_pagination.html", path: announcement_path(@conn, :index), pagination: @pagination) %>
         </div>
       </div>
