--- a/lib/web/templates/admin/announcement/show.html.eex
+++ b/lib/web/templates/admin/announcement/show.html.eex
@@ -23,7 +23,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">
             <%= TimeView.time(@announcement.published_at) %>
