--- a/lib/web/templates/admin/bug/index.html.eex
+++ b/lib/web/templates/admin/bug/index.html.eex
@@ -16,7 +16,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-9">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-body">
           <table class="table">
             <thead>
@@ -45,7 +45,8 @@
               <% end %>
             </tbody>
           </table>
-
+        </div>
+        <div class="box-footer">
           <%= render(SharedView, "_pagination.html", path: bug_path(@conn, :index), pagination: @pagination) %>
         </div>
       </div>
