--- a/lib/web/templates/admin/bug/show.html.eex
+++ b/lib/web/templates/admin/bug/show.html.eex
@@ -17,7 +17,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
         </div>
