--- a/lib/web/templates/admin/channel/_form.html.eex
+++ b/lib/web/templates/admin/channel/_form.html.eex
@@ -1,28 +1,32 @@
-<div class="box">
+<div class="box box-primary">
   <div class="box-header">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_for @changeset, @path, fn (f) -> %>
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
       <%= if Ecto.get_meta(@changeset.data, :state) == :built do %>
         <div class="form-group">
-          <%= label f, :name %>
-          <%= text_input f, :name, class: "form-control" %>
-          <%= error_tag f, :name %>
-          <span class="help-block">This should be a single word and all lower case. It will be used as the command someone enters to speak on the channel.</span>
+          <%= label f, :name, class: "col-md-4" %>
+          <div class="col-md-8">
+            <%= text_input f, :name, class: "form-control" %>
+            <%= error_tag f, :name %>
+            <span class="help-block">This should be a single word and all lower case. It will be used as the command someone enters to speak on the channel.</span>
+          </div>
         </div>
       <% end %>
 
       <div class="form-group">
-        <%= label f, :color %>
-        <%= select f, :color, Color.options(), class: "form-control" %>
-        <%= error_tag f, :color %>
+        <%= label f, :color, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= select f, :color, Color.options(), class: "form-control" %>
+          <%= error_tag f, :color %>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
