--- a/lib/web/templates/admin/channel/edit.html.eex
+++ b/lib/web/templates/admin/channel/edit.html.eex
@@ -16,7 +16,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render("_form.html", path: channel_path(@conn, :update, @channel.id), changeset: @changeset, title: "Edit", submit: "Save") %>
     </div>
   </div>
