--- a/lib/web/templates/admin/channel/index.html.eex
+++ b/lib/web/templates/admin/channel/index.html.eex
@@ -16,7 +16,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <div class="box-tools">
             <%= link("New Channel", to: channel_path(@conn, :new), class: "btn btn-primary") %>
@@ -39,7 +39,7 @@
                   <td><%= channel.name %></td>
                   <td><code><%= channel.color %></code></td>
                   <td>
-                    <%= link("Edit", to: channel_path(@conn, :edit, channel.id), btn: "btn btn-default btn-xs") %>
+                    <%= link("Edit", to: channel_path(@conn, :edit, channel.id), class: "btn btn-default btn-xs") %>
                   </td>
                 </tr>
               <% end %>
