--- a/lib/web/templates/admin/color_code/_form.html.eex
+++ b/lib/web/templates/admin/color_code/_form.html.eex
@@ -1,5 +1,5 @@
-<div class="box">
-  <div class="box-header">
+<div class="box box-primary">
+  <div class="box-header with-border">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
@@ -7,30 +7,36 @@
     <div class="box-body">
       <%= if @key do %>
         <div class="form-group">
-          <%= label f, :key %>
-          <%= text_input f, :key, class: "form-control" %>
-          <%= error_tag f, :key %>
-          <span class="help-block"><%= Help.get("color_code.key") %></span>
+          <%= label f, :key, class: "col-md-4" %>
+          <div class="col-md-8">
+            <%= text_input f, :key, class: "form-control" %>
+            <%= error_tag f, :key %>
+            <span class="help-block"><%= Help.get("color_code.key") %></span>
+          </div>
         </div>
       <% end %>
 
       <div class="form-group">
-        <%= label f, :ansi_escape %>
-        <%= text_input f, :ansi_escape, class: "form-control" %>
-        <%= error_tag f, :ansi_escape %>
-        <span class="help-block"><%= Help.get("color_code.ansi_escape") %></span>
+        <%= label f, :ansi_escape, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :ansi_escape, class: "form-control" %>
+          <%= error_tag f, :ansi_escape %>
+          <span class="help-block"><%= Help.get("color_code.ansi_escape") %></span>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :hex_code %>
-        <%= text_input f, :hex_code, class: "form-control" %>
-        <%= error_tag f, :hex_code %>
-        <span class="help-block"><%= Help.get("color_code.hex_code") %></span>
+        <%= label f, :hex_code, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :hex_code, class: "form-control" %>
+          <%= error_tag f, :hex_code %>
+          <span class="help-block"><%= Help.get("color_code.hex_code") %></span>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
