--- a/lib/web/templates/admin/color_code/edit.html.eex
+++ b/lib/web/templates/admin/color_code/edit.html.eex
@@ -18,7 +18,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: color_code_path(@conn, :update, @color_code.id), key: false, color_code: @color_code, changeset: @changeset, title: "Edit", submit: "Update" %>
     </div>
   </div>
