--- a/lib/web/templates/admin/damage_type/edit.html.eex
+++ b/lib/web/templates/admin/damage_type/edit.html.eex
@@ -17,7 +17,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: damage_type_path(@conn, :update, @damage_type.id), key: false, damage_type: @damage_type, changeset: @changeset, title: "Edit", submit: "Update" %>
     </div>
   </div>
