--- a/lib/web/templates/admin/damage_type/index.html.eex
+++ b/lib/web/templates/admin/damage_type/index.html.eex
@@ -16,8 +16,9 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
+          <h3 class="box-title"></h3>
           <div class="box-tools">
             <%= link("New Damage Type", to: damage_type_path(@conn, :new), class: "btn btn-primary") %>
           </div>
