--- a/lib/web/templates/admin/damage_type/new.html.eex
+++ b/lib/web/templates/admin/damage_type/new.html.eex
@@ -16,7 +16,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: damage_type_path(@conn, :create), key: true, changeset: @changeset, title: "New", submit: "Create" %>
     </div>
   </div>
