--- a/lib/web/templates/admin/help_topic/_form.html.eex
+++ b/lib/web/templates/admin/help_topic/_form.html.eex
@@ -1,31 +1,37 @@
-<div class="box">
+<div class="box box-primary">
   <div class="box-header">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_for @changeset, @path, fn (f) -> %>
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
       <div class="form-group">
-        <%= label f, :name %>
-        <%= text_input f, :name, class: "form-control" %>
-        <%= error_tag f, :name %>
+        <%= label f, :name, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :name, class: "form-control" %>
+          <%= error_tag f, :name %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :keywords %>
-        <%= text_input f, :keywords, value: @changeset |> keywords(), class: "form-control" %>
-        <%= error_tag f, :keywords %>
+        <%= label f, :keywords, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= text_input f, :keywords, value: @changeset |> keywords(), class: "form-control" %>
+          <%= error_tag f, :keywords %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= label f, :body %>
-        <%= textarea f, :body, class: "form-control", rows: 15 %>
-        <%= error_tag f, :body %>
+        <%= label f, :body, class: "col-md-4" %>
+        <div class="col-md-8">
+          <%= textarea f, :body, class: "form-control", rows: 15 %>
+          <%= error_tag f, :body %>
+        </div>
       </div>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
