--- a/lib/web/templates/admin/insight/index.html.eex
+++ b/lib/web/templates/admin/insight/index.html.eex
@@ -16,7 +16,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-6">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Bad Commands</h3>
         </div>
