--- a/lib/web/templates/admin/note/index.html.eex
+++ b/lib/web/templates/admin/note/index.html.eex
@@ -16,7 +16,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-9">
-      <div class="box">
+      <div class="box box-primary">
         <div class="box-header">
           <div class="box-tools">
             <%= link("New Note", to: note_path(@conn, :new), class: "btn btn-primary") %>
@@ -50,7 +50,8 @@
               <% end %>
             </tbody>
           </table>
-
+        </div>
+        <div class="box-footer">
           <%= render(SharedView, "_pagination.html", path: note_path(@conn, :index), pagination: @pagination) %>
         </div>
       </div>
