--- a/lib/web/templates/admin/note/show.html.eex
+++ b/lib/web/templates/admin/note/show.html.eex
@@ -16,8 +16,8 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
-      <div class="box">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Note</h3>
           <div class="box-tools">
