--- a/lib/web/templates/admin/config/_after_sign_in_message_form.html.eex
+++ b/lib/web/templates/admin/config/_after_sign_in_message_form.html.eex
@@ -1,5 +1,7 @@
 <div class="form-group">
-  <%= label @f, :value %>
-  <%= textarea @f, :value, class: "form-control", rows: 15 %>
-  <%= error_tag @f, :value %>
+  <%= label @f, :value, class: "col-md-4" %>
+  <div class="col-md-8">
+    <%= textarea @f, :value, class: "form-control", rows: 15 %>
+    <%= error_tag @f, :value %>
+  </div>
 </div>
