--- a/lib/web/templates/admin/config/edit.html.eex
+++ b/lib/web/templates/admin/config/edit.html.eex
@@ -6,7 +6,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: config_path(@conn, :update, @config.name), changeset: @changeset, name: @config.name, title: "Edit", submit: "Update" %>
     </div>
   </div>
